trabajo final completo

--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<!-- 
-	Texto about panda (puedes borrarlo luego de utilizarlo):
-		The giant panda (Ailuropoda melanoleuca, literally "black and white cat-foot"; Chinese: 大熊猫; pinyin: dà xióng māo, literally "big bear cat"), also known as panda bear or simply panda, is a bear native to south central China. It is easily recognized by the large, distinctive black patches around its eyes, over the ears, and across its round body. The name "giant panda" is sometimes used to distinguish it from the unrelated red panda. Though it belongs to the order Carnivora, the giant panda's diet is over 99% bamboo. Giant pandas in the wild will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents or carrion. In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.
-	 -->
-	<script src="assets/js/main.js"></script>
+    <div id="cabecera">
+        <h1>Love Love Panda Desu</h1>
+        <p>The best place for panda lovers</p>
+    </div>
+    <div id="panda1">       
+    </div>
+    <div class="bordeRosaArriba">
+        <div class="fondoVerde">
+            <div id="textoRosa">
+                <h1>About Pandas</h1>
+                <p>The giant panda (Ailuropoda melanoleuca, literally "black and white cat-foot"; Chinese: 大熊猫; pinyin: dà xióng māo, literally "big bear cat"), also known as panda bear or simply panda, is a bear native to south central China. It is easily recognized by the large, distinctive black patches around its eyes, over the ears, and across its round body. The name "giant panda" is sometimes used to distinguish it from the unrelated red panda. Though it belongs to the order Carnivora, the giant panda's diet is over 99% bamboo. Giant pandas in the wild will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents or carrion. In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.</p>
+            </div>
+        </div>
+    </div>
+    <div class="bordesRosas">
+        <div id="panda2">       
+        </div>
+    </div>
+    <div class="fondoVerde">
+        <h1>Pictures</h1>
+        <div id="imagenes"></div>
+    </div>
+    <div class="bordeRosaArriba">
+        <div id="panda3">       
+        </div>
+    </div>
+    <footer>Love Love panda - Laboratoria 2017 - Desarrollado por: Vanessa Garcia Yara</footer>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
